@@ -32,6 +32,7 @@ A { text-decoration: none }
 hspace="10" src="B.gif" width="100"></A>Release Notes</H1>
 <H2><A NAME="7_1">Changes in Mini-XML 2.7</A></H2>
 <UL>
+<LI>Fixed conformance of mxmldoc's HTML and CSS output.</LI>
 <LI>Added data accessor (&quot;get&quot;) functions and made the mxml_node_t and
  mxml_index_t structures private but still available in the Mini-XML
  header to preserve source compatibility (STR #118)</LI>
